updated basic HTML

--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
 </head>
 
 <body>
-    <h1>
-        Weather App
-    </h1>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a City..." required />
+            <input type="submit" />
+        </form>
+    </header>
+    <main>
+        <h1>
+            Boston
+        </h1>
+        <p>Tuesday 5:15, partially cloudy
+            <br />humidity: 89%, Wind: 10 km/hr
+        </p>
+        <p>🌥12 &degC</p>
+    </main>
+    <footer>
+        <p>Built by
+            <a href="https://github.com/greenough-h">Hayley Greenough</a> and sourced on
+            <a href="https://github.com/greenough-h/weather-app-plus"> Github</a> and hosted on
+            <a href="">Netlify</a>
+        </p>
+    </footer>
 </body>
 
 </html>
