--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Autour+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -23,18 +28,20 @@
                         Boston
                     </h1>
                     <p>Tuesday 5:15, partially cloudy
-                        <br />humidity: 89%, Wind: 10 km/hr
+                        <br />Humidity: <strong>89%</strong>, Wind: <strong>10 km/hr</strong>
                     </p>
                 </div>
-                <div class="temperature">
-                    <p>🌥12 &degC</p>
+                <div class="temperature-block">
+                    <div class="temp-icon">🌥</div>
+                    <div class="temp">12</div>
+                    <div class="unit">&degC</div>
                 </div>
             </div>
         </main>
         <footer>
             <p>Built by
-                <a href="https://github.com/greenough-h">Hayley Greenough</a> and sourced on
-                <a href="https://github.com/greenough-h/weather-app-plus"> Github</a> and hosted on
+                <a href="https://github.com/greenough-h">Hayley Greenough</a>, sourced on
+                <a href="https://github.com/greenough-h/weather-app-plus"> Github</a>, and hosted on
                 <a href="">Netlify</a>
             </p>
         </footer>
