Font color CSS update

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                     <h1 class="city">
                         Boston
                     </h1>
-                    <p>Tuesday 5:15, partially cloudy
-                        <br />Humidity: <strong>89%</strong>, Wind: <strong>10 km/hr</strong>
-                    </p>
+                    <div class="data-details">
+                        <p>Tuesday 5:15, partially cloudy
+                            <br />Humidity: <strong>89%</strong>, Wind: <strong>10 km/hr</strong>
+                        </p>
+                    </div>
                 </div>
                 <div class="temperature-block">
                     <div class="temp-icon">🌥</div>
