Added js for city name update with search

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <div class="all-data">
                 <div class="city-data">
-                    <h1 class="city">
+                    <h1 id="city">
                         Boston
                     </h1>
                     <div class="data-details">
@@ -48,6 +48,7 @@
             </p>
         </footer>
     </div>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
