JS weather data update

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                         Boston
                     </h1>
                     <div class="data-details">
-                        <p>Tuesday 5:15, partially cloudy
-                            <br />Humidity: <strong>89%</strong>, Wind: <strong>10 km/hr</strong>
+                        <p>Tuesday 5:15, <span id="cond">partially cloudy</span>
+                            <br />Humidity:<strong> <span id="humidity">89%</span></strong>, Wind: <strong><span
+                                    id="wind">10 km/hr</span></strong>
                         </p>
                     </div>
                 </div>
