--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                     </h1>
                     <div class="data-details">
                         <p>Tuesday 5:15, <span id="cond">partially cloudy</span>
-                            <br />Humidity:<strong> <span id="humidity">89%</span></strong>, Wind: <strong><span
-                                    id="wind">10 km/hr</span></strong>
+                            <br />
+                            Humidity: <strong><span id="humidity"> 89% </span></strong>,
+                            Wind: <strong><span id="wind"> 10 km/h </span></strong>
                         </p>
                     </div>
                 </div>
