hosted on netlify
host live and footer link update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>Built by
                 <a href="https://github.com/greenough-h">Hayley Greenough</a>, sourced on
                 <a href="https://github.com/greenough-h/weather-app-plus"> Github</a>, and hosted on
-                <a href="">Netlify</a>
+                <a href="https://cool-pastelito-weather-app.netlify.app/">Netlify</a>
             </p>
         </footer>
     </div>
