Current date update

--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
                         Boston
                     </h1>
                     <div class="data-details">
-                        <p>Tuesday 5:15, <span id="cond">partially cloudy</span>
+                        <p>
+                            <span id="date"></span>,
+                            <span id="cond"></span>
                             <br />
-                            Humidity: <strong><span id="humidity"> 89% </span></strong>,
-                            Wind: <strong><span id="wind"> 10 km/h </span></strong>
+                            Humidity: <strong><span id="humidity"> </span></strong>,
+                            Wind: <strong><span id="wind"> </span></strong>
                         </p>
                     </div>
                 </div>
                 <div class="temperature-block">
                     <div class="temp-icon">🌥</div>
-                    <div class="temp">12</div>
+                    <div class="temp"></div>
                     <div class="unit">&degC</div>
                 </div>
             </div>
