weather icon update

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     </div>
                 </div>
                 <div class="temperature-block">
-                    <div class="temp-icon">🌥</div>
+                    <div class="temp-icon">
+                        <img src="" alt="">
+                    </div>
                     <div class="temp"></div>
                     <div class="unit">&degC</div>
                 </div>
