--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,6 +49,25 @@
                 </div>
             </div>
         </main>
+        <div class="forecast">
+            <div class="row">
+                <div class="col-2">
+                    <div class="forecast-day">
+                        Thu
+                    </div>
+                    <img class="forecast-icon"
+                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" alt="">
+                    <div class="forecast-temps">
+                        <span class="forecast-temp-high">
+                            20&deg
+                        </span>
+                        <span class="forecast-temp-low">
+                            15&deg
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
             <p>Built by
                 <a href="https://github.com/greenough-h">Hayley Greenough</a>, sourced on
