--- a/index.html
+++ b/index.html
@@ -49,23 +49,9 @@
                 </div>
             </div>
         </main>
-        <div class="forecast">
-            <div class="row">
-                <div class="col-2">
-                    <div class="forecast-day">
-                        Thu
-                    </div>
-                    <img class="forecast-icon"
-                        src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" alt="">
-                    <div class="forecast-temps">
-                        <span class="forecast-temp-high">
-                            20&deg
-                        </span>
-                        <span class="forecast-temp-low">
-                            15&deg
-                        </span>
-                    </div>
-                </div>
+        <div class="forecast-section">
+            <div class="row" id="forecast">
+
             </div>
         </div>
         <footer>
